--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/SuaTaiKhoan.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/SuaTaiKhoan.cshtml
@@ -42,7 +42,7 @@
         <div class="form-group">
             <div class="checkbox">
                 <label>
-                    @Html.CheckBoxFor(m => m.LaAdmin, new { @class = "checkbox" }) Là Admin
+                    @Html.CheckBoxFor(m => m.LaAdmin, new { @class = "checkbox" }) Admin
                 </label>
             </div>
         </div>
