--- a/QuanLyKhachSan/QuanLyKhachSan/Views/DatPhong/DSPhong.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/DatPhong/DSPhong.cshtml
@@ -7,7 +7,7 @@
 @using QuanLyKhachSan.Models.ViewModels
 @model List<PhongView>
 
-<h3>Danh Sách Phòng</h3>
+@*<h3>Danh Sách Phòng</h3>*@
 <div class="container">
     @foreach (PhongView pv in @Model)
     {
