--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_Footer.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_Footer.cshtml
@@ -1,36 +1,53 @@
-﻿<div class="footer">
+﻿
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css" integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<style>
+    body {
+        font-family: 'Roboto Slab', serif;
+    }
+</style>
+
+<div class="footer">
     <div class="wrap-footer">
         <div class="cot-footer">
-            <h4>Thông Tin</h4>
-            <ul>
-                <li><a href="#">Quản Lý Khách Sạn</a></li>
-                <li><a href="#">Hỗ Trợ Khách Hàng</a></li>
-                <li><a href="#">Mời Bạn Bè</a></li>
-                <li><a href="#">Tư Vấn</a></li>
+            <h2 style="color: #c1c1c1; margin-bottom: 10px; margin-left: 20px; font-weight: 400">Liên hệ</h2>
+            <ul style="color: #c1c1c1;">
+                <li style="color: #ddae68; font-weight: bold; font-size: 1.875rem">Tulip Hotel Group</li>
+                <li>Địa chỉ: 26 -28 Đường Ba Tháng Hai, Phường 1, Thành phố Đà Lạt, Tỉnh Lâm Đồng</li>
+                <li>
+                    Điện Thoại: 0263 3510 995
+                </li>
+                <li>
+                    Email: <p style="color: #ddae68; font-weight: bold;">info@tuliphotelgroup.com</p>
+                </li>
             </ul>
         </div>
         <div class="cot-footer">
-            <h4>Tin Tức</h4>
-            <ul>
-                <li><a href="#">Tin Tức Khách Sạn</a></li>
-                <li><a href="#">Có Gì Mới</a></li>
-                <li><a href="#">Điều Khoản</a></li>
-                <li><a href="#">Dịch Vụ</a></li>
+            <h5 style="color: #c1c1c1; font-weight: 500; margin-left: 20px;">THEO DÕI CHÚNG TÔI</h5>
+            <ul class="site-follow">
+                <li><a href="#"><img src="~/Content/images/sticker_facebook.png" /></a></li>
             </ul>
         </div>
-        <div class="cot-footer">
-            <h4>Liên Hệ</h4>
+        @*<div class="cot-footer">
+            <h2></h2>
             <ul>
-                <li><a href="#">SĐT: 0328758787</a></li>
-                <li><a href="#">Gmail: WH.KnightZ</a></li>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Tuyển dụng</a></li>
+                <li><a href="#">Liên hệ</a></li>
+                <li><a href="#">Hoạt động</a></li>
             </ul>
             <div class="fanpage">
-                <h4>Fanpage</h4>
-                <ul>
-                    <li><a href="https://fb.com/WH.KnightZ"><img src="~/Content/images/sticker_facebook.png" /></a></li>
-                    <li><a href="https://www.youtube.com/channel/UCyRY53rs_lgyJ-p3PzZj0Og"><img src="~/Content/images/sticker_youtube.png" /></a></li>
-                </ul>
-            </div>
-        </div>
+                    <h4>Fanpage</h4>
+                    <ul>
+                        <li><a href="https://fb.com/WH.KnightZ"><img src="~/Content/images/sticker_facebook.png" /></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCyRY53rs_lgyJ-p3PzZj0Og"><img src="~/Content/images/sticker_youtube.png" /></a></li>
+                    </ul>
+                </div>
+        </div>*@
     </div>
 </div>
