--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_Header.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_Header.cshtml
@@ -1,37 +1,44 @@
 ﻿@using QuanLyKhachSan.Models.Entities
 
-<div class="wrap">
+<style>
+    a.log-out:hover {
+        color: #c19c78 !important;
+    }
+</style>
+
+<div class="wrap" style="background-color: #452b1c">
     <a href="/"><img src="~/Content/images/logo.png" width="284" height="189" /></a>
     @if (Session["TaiKhoan"] == null)
     {
         <div class="dang-nhap">
-            <label>Chào Khách!</label>
-            <a href="/CaNhan/DangNhap">Đăng Nhập</a>
+            <label style="color: #ddae68; font-">Chào Khách!</label>
+            <a class="log-out" style="color: white" href="/CaNhan/DangNhap">Đăng Nhập</a>
         </div>
     }
     else
     {
         <div class="dang-nhap">
-            <label>Chào @(((TaiKhoan)Session["TaiKhoan"]).HoTen)!</label>
-            <a href="/CaNhan/DangXuat">Đăng Xuất</a>
+            <label style="color: #ddae68; font-">Chào @(((TaiKhoan)Session["TaiKhoan"]).HoTen)!</label> &nbsp;&nbsp;
+            <a class="log-out" style="color: white" href="/CaNhan/DangXuat">Đăng Xuất</a>
         </div>
     }
     <div class="header">
         <div class="header_bottom">
             <div class="menu">
-                <ul>
-                    <li id="li-0"><a href="/">Trang Chủ</a></li>
+                <ul style="white-space: nowrap">
+                    <li id="li-5"><a href="/HomePage/Index">Trang Chủ</a></li>
+                    <li id="li-0"><a href="/TrangChu/TrangChu">Loại phòng</a></li>
                     <li id="li-1"><a href="/DatPhong/DSPhong">Đặt Phòng</a></li>
                     <li id="li-2"><a href="/CaNhan/CaNhan">Cá Nhân</a></li>
-                    <li id="li-3"><a href="/TrangChu/TinTuc">Tin Tức</a></li>
-                    <li id="li-4"><a href="/TrangChu/LienHe">Liên Hệ</a></li>
+                    <li id="li-3"><a href="/TrangChu/TinTuc">Khuyến mãi</a></li>
+                    <li id="li-4">@*<a href="/TrangChu/LienHe">Liên Hệ</a>*@</li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
 
-@if (ViewBag.DiaChi == null) { ViewBag.DiaChi = 0; }
+@if (ViewBag.DiaChi == null) { ViewBag.DiaChi = 5; }
 
 <script>
     var li = document.getElementById('li-@ViewBag.DiaChi');
