--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_MenuTraiCaNhan.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_MenuTraiCaNhan.cshtml
@@ -5,8 +5,8 @@
             <ul class="danh-muc-lst">
                 <li><a href="/CaNhan/CaNhan">Thông Tin Cá Nhân</a></li>
                 <li><a href="/CaNhan/LichSu">Lịch Sử Đặt Phòng</a></li>
-                <li><a href="#">Gửi Báo Cáo</a></li>
-                <li><a href="#">Chia Sẻ</a></li>
+                @*<li><a href="#">Gửi Báo Cáo</a></li>*@
+                @*<li><a href="#">Chia Sẻ</a></li>*@
             </ul>
         </div>
     </div>
