--- a/QuanLyKhachSan/QuanLyKhachSan/Views/TrangChu/TinTuc.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/TrangChu/TinTuc.cshtml
@@ -4,4 +4,26 @@
     ViewBag.DiaChi = 3;
 }
 
-<h3>Tin Tức</h3>
+<style>
+    .img-discount {
+        width: 50%;
+        height: 50%;
+    }
+</style>
+
+<h3>Khuyễn mãi</h3>
+
+<div class="lpb-item-image alignment-center">
+    <h2 style="font-weight: bold; margin-top: 30px;">
+        THE LONGER YOU STAY THE MORE YOU SAVE
+    </h2>
+    <img class="img-discount" width="2500" height="1200" src="https://www.tuliphotelgroup.com/wp-content/uploads/2022/04/combo_.jpg" class="attachment-full size-full" alt="" loading="lazy">
+    <h2 style="font-weight: bold; margin-top: 30px;">
+        PREMIUM STAY NORMAL PRICE
+    </h2>
+    <img class="img-discount" width="2500" height="1200" src="	https://www.tuliphotelgroup.com/wp-content/uploads/2022/04/hot_eng.jpg" class="attachment-full size-full" alt="" loading="lazy">
+    <h2 style="font-weight: bold; margin-top: 30px;">
+        BLACK FRIDAY
+    </h2>
+    <img class="img-discount" src="https://new-wordpress.s3.amazonaws.com/tulipgroup/wp-content/uploads/2021/11/26051541/Tulip-Black-friday_vie.jpg" class="attachment-full size-full" alt="" loading="lazy">
+</div>
