--- a/QuanLyKhachSan/QuanLyKhachSan/Content/css/style.css
+++ b/QuanLyKhachSan/QuanLyKhachSan/Content/css/style.css
@@ -3,6 +3,11 @@ body {
     background-color: #FFF;
 }
 
+.lpb-item-content {
+    color: #292b2c;
+    text-decoration: underline;
+}
+
 .loai-phong {
     margin: 20px 20px 10px 10px;
     text-align: center;
@@ -31,10 +36,10 @@ body {
 }
 
 .div-zoom {
-	border-radius: 6px;
-	overflow: hidden;
-	margin-bottom: 0px;
-	box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+    overflow: hidden;
+    margin-bottom: 0px;
+    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
 }
 
 .img-phong {
@@ -43,7 +48,7 @@ body {
 
 .img-zoom {
     width: 270px;
-	height: 160px;
+    height: 160px;
     transition-duration: 0.5s;
 }
 
@@ -76,8 +81,7 @@ body {
 
 .header_bottom {
     padding-bottom: 52px;
-    background: #303030;
-    border-radius: 6px;
+    background: #452b1c;
 }
 
 .menu {
@@ -91,23 +95,25 @@ body {
 
         .menu li a {
             text-decoration: none;
-            font-family: Arial;
-            font-size: 14px;
-            font-weight: bolder;
+            font-family: cursive;
+            font-size: 16px;
+            /*font-weight: bolder;*/
             color: #fff;
             display: block;
-            padding: 16px 20px;
-            border-right: 2px ridge #585858;
+            /*padding: 16px 20px;*/
+            /*border-right: 2px ridge #585858;*/
             transition: 0.5s;
             width: 120px;
         }
 
             .menu li a:hover, .menu li.active a {
-                background: #05c46b;
+                /*background: #ddae68;*/
+                color: #ddae68;
+                text-decoration: underline;
             }
 
         .menu li:first-child a {
-            border-left: 2px ridge #585858;
+            /*border-left: 2px ridge #585858;*/
         }
 
 .loai-tim-kiem {
@@ -143,10 +149,10 @@ body {
     height: 32px;
 }
 
-.btn-ok:hover {
-    color: #FFF;
-    background-color: #00DA8A;
-}
+    .btn-ok:hover {
+        color: #FFF;
+        background-color: #00DA8A;
+    }
 
 .dang-nhap-form {
     width: 30%;
@@ -164,16 +170,16 @@ body {
     margin: 0 auto 10px;
 }
 
-.bang-dang-ky-thanh-cong tr{
-    border-bottom: 1px solid #CCCCCC;
-    height: 40px;
-}
+    .bang-dang-ky-thanh-cong tr {
+        border-bottom: 1px solid #CCCCCC;
+        height: 40px;
+    }
 
-.bang-dat-phong-thanh-cong th{
+.bang-dat-phong-thanh-cong th {
     text-align: center;
 }
 
-.bang-dang-ky-thanh-cong tr:last-child{
+.bang-dang-ky-thanh-cong tr:last-child {
     border-bottom: none;
 }
 
@@ -339,11 +345,11 @@ body {
 }
 
 .footer {
-    font-family: Arial;
     overflow: auto;
+    overflow-x: hidden;
     text-decoration: none;
     position: relative;
-    background: #EAEAFF;
+    background: #452b1c;
     border-top: 1px solid #CECECE;
     margin: 60px auto 0 auto;
 }
@@ -351,10 +357,11 @@ body {
 .cot-footer {
     display: block;
     float: left;
-    margin: 0% 0 1% 3.6%;
-    width: 25%;
+    margin: 0% 0 1% 0% 3.6%;
+    width: 33.33%;
     padding: 1.5% 1.5% 0 0;
-    border-left: 1px solid #CECECE;
+    text-align: left;
+    /*border-left: 1px solid #CECECE;*/
 }
 
     .cot-footer:first-child {
@@ -362,9 +369,9 @@ body {
     }
 
     .cot-footer:last-child {
-        width: 29%;
+        width: 30%;
         padding-right: 5%;
-        border-right: 1px solid #CECECE;
+        /*border-right: 1px solid #CECECE;*/
     }
 
     .cot-footer h4 {
@@ -372,11 +379,11 @@ body {
         margin-bottom: .5em;
         font-size: 1.2em;
         line-height: 1.2;
-        font-weight: bold;
+        /*font-weight: bold;*/
         margin-top: 0px;
         letter-spacing: -1px;
         text-transform: uppercase;
-        border-bottom: 1px solid #CECECE;
+        /*border-bottom: 1px solid #CECECE;*/
         padding-bottom: 0.5em;
         padding-left: 20px;
     }
