--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/ThemTaiKhoan.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Admin/ThemTaiKhoan.cshtml
@@ -43,7 +43,7 @@
         <div class="form-group">
             <div class="checkbox">
                 <label>
-                    @Html.CheckBoxFor(m => m.LaAdmin, new { @class = "checkbox" }) Là Admin
+                    @Html.CheckBoxFor(m => m.LaAdmin, new { @class = "checkbox" }) Admin
                 </label>
             </div>
         </div>
