--- a/QuanLyKhachSan/QuanLyKhachSan/Views/CaNhan/LichSu.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/CaNhan/LichSu.cshtml
@@ -27,12 +27,23 @@
                         <tr><th>Ở Từ Ngày:</th><th><span style="color: #669900">@lsv.NgayDen</span></th></tr>
                         <tr><th>Đến Ngày:</th><th><span style="color: #008000">@lsv.NgayTra</span></th></tr>
                         <tr><th>Dịch Vụ:</th><th><span style="color: #009999">@lsv.DichVu</span></th></tr>
-                        <tr><th>Thành Tiền:</th><th><span style="color: #e6004c">@lsv.ThanhTien.000 đ/ngày</span></th></tr>
+                        <tr><th>Giá:</th><th><span style="color: #e6004c">@lsv.ThanhTien.000 đ/ngày</span></th></tr>
+                        @if (lsv.TrangThai > 0)
+                        {
+                            <tr><th>Phương thức thanh toán:</th><th><span style="color: forestgreen">@lsv.PhuongThucThanhToanString</span></th></tr>
+                            <tr><th>Trạng thái:</th><th><span style="color: forestgreen">@lsv.TrangThaiString</span></th></tr>
+                        }
+                        else
+                        {
+                            <tr><th>Trạng thái:</th><th><span style="color: #e6004c">@lsv.TrangThaiString</span></th></tr>
+                        }
+                        <tr><th>Tổng Tiền:</th><th><span style="color: black">@lsv.TongTien.000 đ</span></th></tr>
                     </tbody>
                 </table>
                 @if (lsv.CoTheHuy)
                 {
                     <button class="btn btn-danger" type="submit" data-toggle="modal" data-target="#myModal" onclick="myFunction('/CaNhan/XoaDatPhong/@lsv.MaDatPhong')">Hủy Đặt</button>
+                    <button class="btn btn-success" type="submit" data-toggle="modal" data-target="#paymentModal" onclick="myFunction('/CaNhan/ThanhToanNgay/@lsv.MaDatPhong')">Thanh toán ngay</button>
                 }
                 else
                 {
@@ -80,6 +91,24 @@
     </div>
 </div>
 
+<div class="modal fade" id="paymentModal" role="dialog">
+    <div class="modal-dialog modal-xs">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h5 class="modal-title">Thanh toán bằng phương thức chuyển khoản</h5>
+            </div>
+            <div class="modal-body">
+                <img src="https://t3.gstatic.com/licensed-image?q=tbn:ANd9GcSh-wrQu254qFaRcoYktJ5QmUhmuUedlbeMaQeaozAVD4lh4ICsGdBNubZ8UlMvWjKC" height="280px" alt="Alternate Text" />
+            </div>
+            <div class="modal-footer">
+                <input type="button" style="width:70px" class="btn btn-success" data-dismiss="modal" value="OK" id="btnOK" onclick="btnOKClick()" />
+                <input type="button" style="width:70px" class="btn btn-default" data-dismiss="modal" value="Hủy bỏ" />
+            </div>
+        </div>
+    </div>
+</div>
+
 @if (TempData["HuyDat"] != null)
 {
     TempData["HuyDat"] = null;
@@ -101,5 +130,30 @@
     </div>
     <script>
         $("#modalHuyThanhCong").modal({ show: true });
+    </script>
+}
+
+
+@if (TempData["ThanhToan"] != null)
+{
+    TempData["ThanhToan"] = null;
+    <div class="modal fade" id="modalThanhToanThanhCong" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Thông Báo</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Thanh toán thành công!</p>
+                </div>
+                <div class="modal-footer" style="text-align: center">
+                    <input type="button" style="width:70px" class="btn btn-success" data-dismiss="modal" value="OK" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        $("#modalThanhToanThanhCong").modal({ show: true });
     </script>
 }
