--- a/QuanLyKhachSan/QuanLyKhachSan/Views/SharedAdmin/_MenuTraiAdmin.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/SharedAdmin/_MenuTraiAdmin.cshtml
@@ -41,6 +41,7 @@
                 <div class="list-group">
                     <a href="/Admin/DSPhong" class="list-group-item">Danh Sách Phòng</a>
                     <a href="/Admin/ThemPhong" class="list-group-item">Thêm Mới Phòng</a>
+                    <a href="/Admin/KeHoachPhong" class="list-group-item">Xem kế hoạch Phòng</a>
                 </div>
             </div>
         </div>
